--- a/functions/package.json
+++ b/functions/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "get.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "npm install"
   },
   "keywords": [],
   "author": "",
